Fix contrast color in accordion headers

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,30 +12,35 @@
 $primary: LightSeaGreen;
 $secondary: SlateGray;
 
-$min-contrast-ratio: 2.5;
+$min-contrast-ratio: 1.5;
 
 // import bootstrap styles (with overwritten values from above)
 @import '~bootstrap/scss/bootstrap';
 
 /*
- * colors
+ * explicitly set contrast color for the accordion header
  */
 
-.color-red {
-  color: red;
-}
+$contrast: white;
 
 /*
  * accordion buttons
  */
 
+// accordion header has primary color in background and correct contrast color for font
 .accordion-button, .accordion-button:not(.collapsed) {
   background-color: var(--bs-primary);
-  color: black !important;
+  color: $contrast !important;
 }
 
+// expanded accordion header has bold text
 .accordion-button:not(.collapsed) {
   font-weight: bold;
+}
+
+// always the same expand button color
+.accordion-button::after, .accordion-button:not(.collapsed)::after, .accordion-button:not(.collapsed)::after {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$contrast}'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
 
 /*
